--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "dependencies": {
     "lodash": "^4.17.11",
     "midday.js": "^1.0.1",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-required-if": "^1.0.3"
   },
